--- a/views/protected/siteconfig.erb
+++ b/views/protected/siteconfig.erb
@@ -62,7 +62,7 @@
     </p>
     <p>
         <label for="text_field">How many days before asking for a new password (0 means never ask) ?</label>
-        <input type="number" id="text_field">
+        <input type="number" id="days_before_pw_expire" name="securitysetting[days_before_pw_expire]" value="<%= @security_settings.days_before_pw_expire %>">
     </p>
      <p><input class="button" type="submit" value="Submit"></p>
 </form>
