--- a/views/login.erb
+++ b/views/login.erb
@@ -12,8 +12,9 @@
         <div class="fancy-lock"><i class="fa fa-lock fa-6"></i></div>
         <input name="user[username]" type="text" class="form-control" placeholder="Username" required="" autofocus="">
         <input name="user[password]" type="password" class="form-control" placeholder="Password" required="">
+         <p><a href="/auth/forgot">Forgot your password?</a></p>
         <button class="" type="submit">Login</button>
-</form>
+    </form>
 
 </div>
 
