Added the user profile page. activated ssl. in order to run the application, you’ll need to use “rackup” instead of using shotgun. Also, make sure you choose the right port and go to the https link, not http.

--- a/views/partials/header.erb
+++ b/views/partials/header.erb
@@ -26,6 +26,7 @@
             <% if env['warden'].user.is_admin? %>
             <li><a href="/protected/logs"><i class="fa fa-book"></i> View Logs</a></li>
             <% end %>
+            <li><a href="/protected/profile"><i class="fa fa-child"></i> Profile</a></li>
             <li><a href="/protected/pwupdate"><i class="fa fa-cog"></i> Change Password</a></li>
             <li><a href="/auth/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
           </ul>
